test(Problem6) : 숫자를 포함하는 이메일 주소 테스트 케이스 추가